# surgeos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  create_image.sh  linker.ld  linker_kernel.ld  make_sysroot.sh  test.c
grub_config/: menu.lst
i686-surgeos/lib/ldscripts/: elf_i386.x  elf_i386.xbn  elf_i386.xc  elf_i386.xce  elf_i386.xcer  elf_i386.xd  elf_i386.xdc  elf_i386.xdce  elf_i386.xdcer  elf_i386.xde  elf_i386.xder  elf_i386.xdw  elf_i386.xdwe  elf_i386.xdwer  elf_i386.xe  elf_i386.xer  elf_i386.xn  elf_i386.xs  elf_i386.xsc  elf_i386.xsce  elf_i386.xscer  elf_i386.xse  elf_i386.xser  elf_i386.xsw  elf_i386.xswe  elf_i386.xswer  elf_i386.xw  elf_i386.xwe  elf_i386.xwer  elf_x86_64.x  elf_x86_64.xbn  elf_x86_64.xc  elf_x86_64.xce  elf_x86_64.xcer  elf_x86_64.xdc  elf_x86_64.xdce  elf_x86_64.xde  elf_x86_64.xder  elf_x86_64.xdw  elf_x86_64.xdwe  (+29 more)
include/: _font.h  _formatting.h  aio.h  assert.h  curses.h  errno.h  fcntl.h  iso646.h  limits.h  math.h  signal.h  stdalign.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h
include/drivers/: framebuffer.h  keyboard.h  serial.h  tty.h
include/internal/: stdio_internal.h  syscall.h
include/kernel/: io.h  isr.h  kernel.h  keyboard.h  memory.h  multiboot.h  paging.h  physmem.h  portio.h  tty.h  vga.h
include/kernel/driver/: serial.h
include/kernel/syscall/: syscall.h
include/surgeos/: logger.h  misc.h  shell.h
include/surgeos_libc/: ctype.h  stdbool.h  stdio.h  stdnoreturn.h
include/surgeos_libc/sys/: cdefs.h  io.h
include/sys/: cdefs.h  mman.h  types.h  wait.h
kernel/: CMakeLists.txt  crtn.asm  isr.asm  isr.c  kernel.asm  kernel.c  kernel_init.c  realmode.asm  syscall.c
kernel/arch/ix86/: boot.asm  crt0.asm  crti.asm  gdt.asm  gdt.c  gfxmode.asm  idt.c  isr.asm  isr.c  kernel.asm  paging.asm  paging.c  physmem.c  realmode.asm  tty.c
kernel/driver/: framebuffer.c  keyboard.c  memory.c  serial.c  tty.c  vga.c
kernel/surgeos/shell/: clear.c  echo.c  exit.c  help.c  reboot.c  shell.c
libc/: CMakeLists.txt  stdio.c  stdlib.c  string.c
libc/assert/: assert_fail.c
libc/ctype/: isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
libc/errno/: errno.c
libc/stdio/: fprintf.c  fputc.c  printf.c  putchar.c  puts.c  stdio.c  vfprintf.c
libc/stdlib/: abort.c  exit.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
libc/unistd/: _exit.c  read.c  write.c
libk/: CMakeLists.txt  formatting.c
libk/ctype/: isalnum.c  isdigit.c  isprint.c  ispunct.c  isupper.c  toupper.c
libk/stdio/: fflush.c  fputc.c  printf.c  putc.c  vfprintf.c  vsnprintf.c
libk/stdlib/: abort.c  itoa.c  panic.c
libk/string/: memmove.c  memset.c  strcmp.c  strcpy.c  strncat.c  strncpy.c  strtok.c
toolchains/: i386-toolchain.cmake  i686-elf.cmake  i686-surgeos.cmake  x86_64-toolchain.cmake
